Updated project after deployment changes